<resources>
    <string name="app_name">cTransaction</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_index_tabbar_home">首页</string>
    <string name="title_index_tabbar_message">消息</string>
    <string name="title_index_tabbar_user">用户</string>
    <string name="title_index_tabbar_work">作品</string>

    <string name="action_search">Search</string>


    //Back Arrow Path Data
    <string name="back_vector_path" translatable="false">M50 25,L80 50,M20 50,L80 50,M50 75,L80 50</string>
    //Menu Path Data
    <string name="menu_vector_path" translatable="false">M20 30,L80 30,M20 50,L80 50,M20 70,L80 70</string>



    <string name="user_image_description">该图片用于表示用户</string>
    <string name="look_image_description">该图片用于表示浏览数量</string>
    <string name="like_image_description">该图片用于表示收藏数量</string>
    <string name="more_image_description">该图片同于表示更多操作选项</string>

    <!--Index User 首页子页面相关的String-->
    <string name="title_index_user_my_identification">认证进度</string>
    <string name="title_index_user_my_buy">我买到的</string>
    <string name="title_index_user_my_sale">我卖出的</string>
    <string name="title_index_user_appeal_handing">申诉处理</string>

    <string name="title_index_user_logout">退出登录</string>

    <string name="retracting_message">正在撤回消息</string>
    <string name="copy">复制</string>
    <string name="recall">撤回</string>




    <!--work info 页面相关的String-->
    <string name="title_work_info_comment">留言</string>
    <string name="title_work_info_collect">收藏</string>
    <string name="work_info_comment_description">该图片表示进行留言操作</string>
    <string name="work_info_collect_description">该图片表示对作品进行收藏或者取消收藏</string>
    <string name="title_work_info_buy_button">购买版权</string>


    <string name="title_login_register">登录/注册</string>
    <string name="action_get_verify_code">获取验证码</string>

    <string name="title_login">登录</string>
    <string name="title_login_by_verify_code">验证码登录</string>
    <string name="title_register">注册</string>
    <string name="lab_forget_password">忘记密码?</string>
    <string name="lab_login_by_verify_code">验证码登录</string>
    <string name="lab_login_by_password">密码登录</string>
    <string name="tip_please_input_phone_number">请输入手机号码</string>
    <string name="title_phone_number">手机号码</string>
    <string name="title_password">密码</string>
    <string name="title_old_password">旧密码</string>
    <string name="hint_please_input_verify_code">请输入验证码</string>
    <string name="lab_verify_code">验证码</string>
    <string name="tip_password_error">密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_new_password_error">新密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_phone_number_error">无效的手机号！</string>
    <string name="regex_phone_number">^((13[0-9])|(14[5,7])|(15[0-3,5-9])|(16[6])|(17[0,1,3,5-8])|(18[0-9])|(19[8,9]))\\d{8}$</string>
    <string name="tip_verify_code_error">请输入4位数验证码</string>
    <string name="regex_verify_code">^\\d{4}$</string>
    <string name="regex_password">^(?:(?=.*[a-zA-Z])(?=.*[0-9])).{8,18}$</string>
    <string name="title_forget_password">重置密码</string>
    <string name="lab_register_account">点击注册即表示同意</string>
    <string name="lab_service_protocol"><![CDATA[<用户协议>]]></string>
    <string name="url_add_qq_group"><![CDATA[https://qm.qq.com/cgi-bin/qm/qr?k=0lUqsbfHTNDbS2KK4nTPwPq07tOqAk6J&authKey=4PzQ2cQYIr28Qyg%2FkTk%2BmI7xlcq8B0IZKZGc1H3XloRrCDBO8az97DIsBHnQW0Ya]]></string>
    <string name="title_user_protocol">用户协议</string>
    <string name="title_privacy_protocol">隐私政策</string>
    <string name="agree_protocol">我已阅读并同意</string>
    <string name="lab_and">和</string>


    <!-- 隐私政策弹窗   -->
    <string name="lab_exit_app">退出应用</string>
    <string name="lab_agree">同意</string>
    <string name="lab_disagree">不同意</string>
    <string name="lab_look_again">再次查看</string>
    <string name="lab_still_disagree">仍不同意</string>
    <string name="title_reminder">温馨提示</string>
    <string name="content_think_about_it_again">要不要再想想</string>
    <string name="content_privacy_explain_again">我们非常重视对你个人信息的保护，承诺严格按照《%s隐私权政策》保护及处理你的信息。如果你不同意该政策，很遗憾我们将无法为你提供服务</string>
    <string name="lab_privacy_name">《%s隐私权政策》</string>

</resources>