<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="searchResultItemData"
            type="com.linrty.ctransaction.fragment.search.model.SearchResultItemModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.xuexiang.xui.widget.imageview.RadiusImageView
            android:id="@+id/searchResultImg"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider4"
            app:riv_corner_radius="7dp"
            app:riv_is_circle="false"
            app:srcCompat="@drawable/ic_launcher_background"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/searchResultItemTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@={searchResultItemData.itemTitle}"
            android:textColor="@color/black_400"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/searchResultImg"
            app:layout_constraintTop_toTopOf="@+id/searchResultImg" />

        <ImageView
            android:id="@+id/searchResultItemUserImg"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/user_image_description"
            app:layout_constraintBottom_toTopOf="@+id/searchResultItemLookImg"
            app:layout_constraintStart_toEndOf="@+id/searchResultImg"
            app:srcCompat="@drawable/ic_user"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/searchResultItemUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="时刻提防"
            android:textColor="@color/black_200"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/searchResultItemUserImg"
            app:layout_constraintStart_toEndOf="@+id/searchResultItemUserImg"
            app:layout_constraintTop_toTopOf="@+id/searchResultItemUserImg"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/searchResultItemLookImg"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/look_image_description"
            app:layout_constraintBottom_toBottomOf="@+id/searchResultImg"
            app:layout_constraintStart_toEndOf="@+id/searchResultImg"
            app:srcCompat="@drawable/ic_eye"
            app:tint="@color/black_200" />

        <TextView
            android:id="@+id/searchResultItemLookNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="999+"
            android:textColor="@color/black_200"
            android:textSize="@dimen/item_icon_num_size"
            app:layout_constraintBottom_toBottomOf="@+id/searchResultItemLookImg"
            app:layout_constraintStart_toEndOf="@+id/searchResultItemLookImg"
            app:layout_constraintTop_toTopOf="@+id/searchResultItemLookImg" />

        <ImageView
            android:id="@+id/searchResultItemLikeImg"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="100dp"
            android:contentDescription="@string/like_image_description"
            app:layout_constraintBottom_toBottomOf="@+id/searchResultImg"
            app:layout_constraintStart_toEndOf="@+id/searchResultImg"
            app:srcCompat="@drawable/ic_heart_fill"
            app:tint="@color/black_200" />

        <TextView
            android:id="@+id/searchResultItemLikeNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="999+"
            android:textColor="@color/black_200"
            android:textSize="@dimen/item_icon_num_size"
            app:layout_constraintBottom_toBottomOf="@+id/searchResultItemLikeImg"
            app:layout_constraintStart_toEndOf="@+id/searchResultItemLikeImg"
            app:layout_constraintTop_toTopOf="@+id/searchResultItemLikeImg" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>