<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="data"
            type="com.linrty.ctransaction.fragment.work.WorkInfoViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="?attr/backgroundColor"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.xuexiang.xui.widget.actionbar.TitleBar
            android:id="@+id/workInfoTitleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tb_immersive="true"
            app:tb_titleText="稳定性冠心病基层用药指南"
            android:background="#B0DFE5"
            app:tb_useThemeColor="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/workInfoScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/workInfoBottomLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/workInfoTitleBar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.xuexiang.xui.widget.imageview.RadiusImageView
                    android:id="@+id/workInfoUserAvatar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:riv_is_circle="true"
                    app:srcCompat="@drawable/ic_default_avatar" />

                <View
                    android:id="@+id/divider5"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/workInfoUserAvatar" />

                <TextView
                    android:id="@+id/workInfoDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="稳定性冠心病包括3种情况∶慢性稳定性劳力型心绞痛、缺血性心肌病和急性冠状动脉综合征（ACS）之后稳定的病程阶段。慢性稳定性劳力型心绞痛是在冠状动脉固定性严重狭窄基础上，由于心肌负荷的增加引起的心肌急剧的、短暂的缺血缺氧临床综合征。缺血性心肌病指由于长期心肌缺血导致心肌局限性或弥漫性纤维化，从而产生心脏收缩和/或舒张功能受损，引起心脏扩大或僵硬、慢性心力衰竭、心律失常等一系列临床表现的临床综合征。ACS之后稳定的病程阶段通常无症状，表现为长期、静止、无典型缺血症状的状态。 "
                    android:textColor="@color/black_400"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider5" />


                <ImageView

                    android:id="@+id/workInfoImage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:scaleType="fitStart"
                    app:layout_constraintEnd_toEndOf="@+id/workInfoDetails"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/workInfoDetails"
                    app:layout_constraintTop_toBottomOf="@+id/workInfoDetails"
                    app:srcCompat="@drawable/text" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="99人收藏 · 浏览999+"
                    android:textSize="@dimen/index_home_item_title_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/workInfoImage" />

                <View
                    android:id="@+id/divider7"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/blue_20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView12" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/workInfoCommentRV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginRight="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.531"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider7"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/workInfoUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="Linrty"
                    android:textColor="@color/black_400"
                    android:textSize="16sp"
                    android:textStyle="normal|bold"
                    app:layout_constraintBottom_toBottomOf="@+id/workInfoUserAvatar"
                    app:layout_constraintStart_toEndOf="@+id/workInfoUserAvatar"
                    app:layout_constraintTop_toTopOf="@+id/workInfoUserAvatar" />



            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/workInfoBottomLayout"
            android:layout_width="match_parent"
            android:background="?attr/backgroundColor"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/workInfoCommentIcon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/work_info_comment_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_comment"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/workInfoCommentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_work_info_comment"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/workInfoCommentIcon"
                app:layout_constraintStart_toStartOf="@+id/workInfoCommentIcon"
                app:layout_constraintTop_toBottomOf="@+id/workInfoCommentIcon"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:id="@+id/workInfoCollectIcon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="32dp"
                android:contentDescription="@string/work_info_collect_description"
                app:layout_constraintBottom_toBottomOf="@+id/workInfoCommentIcon"
                app:layout_constraintStart_toEndOf="@+id/workInfoCommentIcon"
                app:layout_constraintTop_toTopOf="@+id/workInfoCommentIcon"
                app:srcCompat="@drawable/ic_not_collect"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/workInfoCollectTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_work_info_collect"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/workInfoCollectIcon"
                app:layout_constraintStart_toStartOf="@+id/workInfoCollectIcon"
                app:layout_constraintTop_toBottomOf="@+id/workInfoCollectIcon"
                tools:ignore="TextContrastCheck" />

            <com.xuexiang.xui.widget.button.roundbutton.RoundButton
                android:id="@+id/workInfoTalkButton"
                style="@style/RoundButton.Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="交谈"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/workInfoBuyButton"
                app:layout_constraintTop_toTopOf="parent"
                app:rb_backgroundColor="?attr/success"
                app:rb_isRadiusAdjustBounds="true"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <com.xuexiang.xui.widget.button.roundbutton.RoundButton
                android:id="@+id/workInfoBuyButton"
                style="@style/RoundButton.Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/title_work_info_buy_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:rb_backgroundColor="?attr/error"
                app:rb_isRadiusAdjustBounds="true"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>